--- a/data.ipynb
+++ b/data.ipynb
@@ -7104,8 +7104,302 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 105,
+   "id": "4110fa62",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_csv(\"Database/openapi/seoul/지반침하사고_정보_위경도 채움.csv\", dtype=str)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 107,
+   "id": "2dc7d7fc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def insert_labels_to_column(df, labels, start_idx=0):\n",
+    "    \"\"\"\n",
+    "    sagoDetailProcessed 컬럼에 지정한 라벨 리스트를 해당 인덱스에 맞게 삽입합니다.\n",
+    "\n",
+    "    Args:\n",
+    "        df (pd.DataFrame): 원본 DataFrame\n",
+    "        labels (list): 각 행에 삽입할 라벨 리스트\n",
+    "        start_idx (int): 시작 인덱스 (기본값은 0)\n",
+    "\n",
+    "    Returns:\n",
+    "        pd.DataFrame: 수정된 DataFrame\n",
+    "    \"\"\"\n",
+    "    end_idx = start_idx + len(labels)\n",
+    "    \n",
+    "    # 컬럼 없으면 생성\n",
+    "    if \"sagoDetailProcessed\" not in df.columns:\n",
+    "        df[\"sagoDetailProcessed\"] = \"\"\n",
+    "\n",
+    "    for i, label in enumerate(labels):\n",
+    "        df.at[start_idx + i, \"sagoDetailProcessed\"] = label\n",
+    "\n",
+    "    return df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 108,
    "id": "eb6cf70d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0                               열수송관(D600mm) 노후 손상으로 함몰 발생\\n(굴착복구 미흡분야로 관리)\n",
+      "1                           상수관(？300mm)에서 분기된 소화전 연결관(？100mm) 동파로 누수되어 함몰발생\n",
+      "2                                           KT 통신맨홀 슬라브 파손\\n(굴착복구 미흡분야로 관리)\n",
+      "3                                                  하수관로(D450㎜) 노후？파손으로 토사유실\n",
+      "4                          인근 공사차량(레미콘차) 중량에 의한 노후 하수박스 상판파손(하수박스 1946년 부설)\n",
+      "5                                           폐쇄된 빗물받이 연결관을 폐관처리 하지 않아 토사가 유실\n",
+      "6                                              우수관로(D1000mm) 노후파손으로 인한 토사유입\n",
+      "7                                                       공공하수관 노후 손상되어 토사 유실\n",
+      "8                                                      하수관 연결부 이격으로 인한 토사유입\n",
+      "9                  지하철 7호선 공사시 설치한 가시설(H-beam)인접 다짐불량, 토류판 부식 등 장기침하로 인한 함몰\n",
+      "10                                                폐쇄되지 않은 폐 빗물받이연결관으로 토사 유실\n",
+      "11             상수도 이설구간 접합부(700mm에서 300mm로 분기)에서  외부 진동, 압력 등에 의한 파열로 누수 발생\n",
+      "12                                                     굴착복구 다짐 미흡으로 인한 장기침하\n",
+      "13                                               상수도관 및 통신관 매설 시 하수관로 파손 추정\n",
+      "14                                     주변 사각형거의 바닥 세굴 및 파손, 벽체 및 슬래브 노후화 심화\n",
+      "15                                              하수관과 맨홀 접속부 이음 불량으로 인한 도로침하\n",
+      "16    건축공사장 인입 상수도 맨홀 하중 등으로 하수관 처짐발생->하수가 공사장 내부로 토립자와 함께 유출되어 지반(보도)침하 발생\n",
+      "17                               노후하수관(1,200mm)손상 및 연결관 접속부 미폐쇄 조치로 지반침하 발생\n",
+      "18                                               굴착원인조사 결과 원인불명(굴착복구 불량 추정)\n",
+      "19                                                 노후하수관-하수맨홀 연결부 파손으로 지반침하\n",
+      "Name: sagoDetail, dtype: object\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "# 잘림 없이 전체 텍스트 출력 설정\n",
+    "pd.set_option(\"display.max_colwidth\", None)\n",
+    "\n",
+    "index = 0\n",
+    "# 예시: 앞 20개만 출력\n",
+    "print(df[\"sagoDetail\"].iloc[index:index + 20])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 109,
+   "id": "b92029dd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(133, 133, 0, (133, 22))"
+      ]
+     },
+     "execution_count": 109,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "labels = [\n",
+    "[\"노후 지하시설물\", \"굴착/복구 불량\"],  # 0: 열수송관 노후 + 복구 미흡 관리\n",
+    "\"노후 지하시설물\",                  # 1: 상수관 동파 누수\n",
+    "[\"노후 지하시설물\", \"굴착/복구 불량\"],  # 2: 슬라브 파손 + 복구 미흡\n",
+    "[\"노후 지하시설물\", \"지반 약화\"],     # 3: 노후 하수관 파손 → 토사유실\n",
+    "[\"공사 영향\", \"노후 지하시설물\"],     # 4: 공사차량 영향 + 노후 하수박스\n",
+    "\"설계/시공 오류\",                  # 5: 폐쇄하지 않은 연결관\n",
+    "[\"노후 지하시설물\", \"지반 약화\"],     # 6: 노후 우수관 파손 → 유입\n",
+    "[\"노후 지하시설물\", \"지반 약화\"],     # 7: 하수관 손상 → 유실\n",
+    "[\"설계/시공 오류\", \"지반 약화\"],      # 8: 이격 → 토사 유입\n",
+    "[\"공사 영향\", \"굴착/복구 불량\"],      # 9: 가시설 영향 + 다짐불량 등\n",
+    "\"설계/시공 오류\",                  # 10: 폐쇄 안 된 연결관\n",
+    "\"노후 지하시설물\",                 # 11: 상수도 접합부 파열 누수\n",
+    "\"굴착/복구 불량\",                 # 12: 다짐 미흡\n",
+    "\"지하시설물 영향\",                 # 13: 매설 중 하수관 파손\n",
+    "\"노후 지하시설물\",                 # 14: 슬래브 및 벽체 노후화\n",
+    "\"설계/시공 오류\",                 # 15: 맨홀 접속부 이음 불량\n",
+    "[\"공사 영향\", \"설계/시공 오류\"],     # 16: 공사장 인입 및 접속부 처리 미흡\n",
+    "\"노후 지하시설물\",                 # 17: 하수관 손상 + 접속부 미폐쇄\n",
+    "\"기타 / 미상\",                   # 18: 원인불명 (추정)\n",
+    "\"노후 지하시설물\",                 # 19: 하수맨홀 연결부 파손\n",
+    "[\"노후 지하시설물\", \"설계/시공 오류\", \"자연재해\"],  # 20: 노후관 + 연결부 이격 + 집중호우\n",
+    "\"노후 지하시설물\",                         # 21: 상수도관 부식\n",
+    "\"노후 지하시설물\",                         # 22: 미철거 + 손괴\n",
+    "[\"공사 영향\", \"자연재해\", \"지반 약화\"],         # 23: 집중호우 + 토사 유입 + 침하\n",
+    "[\"설계/시공 오류\", \"지반 약화\"],              # 24: 이음부 이격 → 유실\n",
+    "\"기타 / 미상\",                           # 25: 장기침하 추정 (불명확)\n",
+    "\"굴착/복구 불량\",                         # 26: 다짐불량, 압밀침하\n",
+    "\"노후 지하시설물\",                         # 27: 차량진동 → 상수도관 누수\n",
+    "[\"설계/시공 오류\", \"지반 약화\"],              # 28: 접합부 파손 → 토사 유출\n",
+    "[\"노후 지하시설물\", \"지반 약화\", \"기타 / 미상\"], # 29: 파손 + 조사 중\n",
+    "\"지반 약화\",                             # 30: 장기 압밀침하\n",
+    "\"설계/시공 오류\",                         # 31: 접속부 시공불량\n",
+    "[\"노후 지하시설물\", \"설계/시공 오류\"],         # 32: 접속부 불량\n",
+    "[\"노후 지하시설물\", \"지반 약화\"],             # 33: 상수도관 누수 → 토사유실\n",
+    "[\"공사 영향\", \"지반 약화\"],                 # 34: 중차량 하중 → 침하\n",
+    "\"굴착/복구 불량\",                         # 35: 장기침하\n",
+    "[\"설계/시공 오류\", \"지반 약화\"],              # 36: 접합 불량 + 쇄굴\n",
+    "[\"공사 영향\", \"노후 지하시설물\", \"설계/시공 오류\"], # 37: 복합요인, 공사장, 노후관, 손괴\n",
+    "\"설계/시공 오류\",                         # 38: 접합부 결함\n",
+    "\"지반 약화\",                              # 39: 장기압밀 침하\n",
+    "\"노후 지하시설물\",                            # 40: 하수관 연결부 파손\n",
+    "\"노후 지하시설물\",                            # 41: 상수도관 누수\n",
+    "\"설계/시공 오류\",                             # 42: 빗물받이 벽체 파손\n",
+    "\"기타 / 미상\",                               # 43: 점검 이상 없음, 원인 불명\n",
+    "\"설계/시공 오류\",                             # 44: 엘리베이터 설치 부실\n",
+    "\"설계/시공 오류\",                             # 45: 통신관 하부 빈 공간\n",
+    "\"노후 지하시설물\",                            # 46: 맨홀 하부 구체 파손\n",
+    "[\"노후 지하시설물\", \"설계/시공 오류\"],          # 47: 하수관 이격, 라이닝 변형\n",
+    "\"노후 지하시설물\",                            # 48: 하수맨홀 하부 파손\n",
+    "\"노후 지하시설물\",                            # 49: 하수관 노후화로 인한 동공\n",
+    "[\"설계/시공 오류\", \"기타 / 미상\"],             # 50: 폐하수관 존치, 매립물\n",
+    "[\"자연재해\", \"설계/시공 오류\", \"지반 약화\"],    # 51: 호우 + 토류벽 유실 + 접합부 파손\n",
+    "\"노후 지하시설물\",                            # 52: 차량진동 → 상수도 누수\n",
+    "\"지반 약화\",                                 # 53: 침하로 동공 발생\n",
+    "[\"공사 영향\", \"지반 약화\"],                   # 54: 공사장 차수 불량 → 지하수위 침하\n",
+    "[\"설계/시공 오류\", \"공사 영향\"],              # 55: 접합불량 + 신설 하수관 공사장\n",
+    "[\"노후 지하시설물\", \"공사 영향\"],             # 56: 벽체·슬래브 노후 + 중차량 진입\n",
+    "\"공사 영향\",                                 # 57: 건축현장 지하공사\n",
+    "\"노후 지하시설물\",                            # 58: 강관(1970년 부설) 용접부 파손\n",
+    "[\"공사 영향\", \"기타 / 미상\"],                 # 59: 민간 아파트 굴착공사 중 사고 추정\n",
+    "\"노후 지하시설물\",                        # 60: 하수관 이음부 이격\n",
+    "\"원인불명/기타\",                         # 61: 원인조사 필요\n",
+    "\"지반 약화\",                             # 62: 지하수로 인한 토사 유출\n",
+    "[\"자연재해\", \"노후 지하시설물\"],         # 63: 집중호우 + 하수박스 파손\n",
+    "\"원인불명/기타\",                         # 64: NaN\n",
+    "\"지하시설물 영향\",                      # 65: 주변 지하매설물 이상 추정\n",
+    "\"설계/시공 오류\",                       # 66: 배수시설 연결관 접합불량\n",
+    "\"원인불명/기타\",                         # 67: 원인미상\n",
+    "[\"공사 영향\", \"굴착/복구 불량\"],         # 68: 승강편의시설 공사 + 다짐불량 + 집중호우\n",
+    "[\"공사 영향\", \"자연재해\"],              # 69: 집중호우 + 공사장 하수관 월류\n",
+    "\"노후 지하시설물\",                        # 70: 개인 사유지 노후 하수관\n",
+    "[\"자연재해\", \"설계/시공 오류\"],         # 71: 집중호우 + 배수설비 파손\n",
+    "\"지반 약화\",                             # 72: 통신관로 주변 침하\n",
+    "\"노후 지하시설물\",                        # 73: 하수관 파손\n",
+    "\"굴착/복구 불량\",                        # 74: 다짐불량\n",
+    "\"설계/시공 오류\",                       # 75: 가정하수관 연결부 파손\n",
+    "\"공사 영향\",                             # 76: 건축물 신축 공사장 인근\n",
+    "\"설계/시공 오류\",                       # 77: 가시설 미제거 + 통신케이블 처짐\n",
+    "\"노후 지하시설물\",                        # 78: 흄관 파손\n",
+    "\"설계/시공 오류\",                        # 79: 하수관 이음부 이격\n",
+    "\"굴착/복구 불량\",          # 80: 되메우기 다짐불량\n",
+    "\"굴착/복구 불량\",          # 81: 다짐불량\n",
+    "[\"공사 영향\", \"지반 약화\"], # 82: 공사 인접 + 우천 토사유실\n",
+    "[\"공사 영향\", \"자연재해\"],  # 83: 신설공사 + 우천\n",
+    "[\"공사 영향\", \"설계/시공 오류\"], # 84: 공사 중 이음부 이격 및 누수\n",
+    "\"노후 지하시설물\",         # 85: 하수박스 파손\n",
+    "\"노후 지하시설물\",         # 86: 노후 하수관 파손\n",
+    "\"노후 지하시설물\",         # 87: 하수박스 외벽 파손\n",
+    "\"설계/시공 오류\",          # 88: 접속부 불량, 이음부 이격\n",
+    "\"지반 약화\",              # 89: 토사 유출 지속 → 지반침하\n",
+    "[\"노후 지하시설물\", \"자연재해\"], # 90: 타관통과 + 집중호우\n",
+    "\"노후 지하시설물\",         # 91: 폐쇄 상수관로 접합부 손상\n",
+    "\"노후 지하시설물\",         # 92: 상수도 누수\n",
+    "\"지반 약화\",              # 93: 부등침하 → 파손\n",
+    "\"노후 지하시설물\",         # 94: 상수도 누수 → 하수관 이격\n",
+    "\"노후 지하시설물\",         # 95: 하수관 맨홀 이상\n",
+    "\"기타 / 미상\",            # 96: 불명 조적구조물 파손 (구조물 종류 불명확)\n",
+    "\"노후 지하시설물\",         # 97: 상수관 손상 누수\n",
+    "\"굴착/복구 불량\",          # 98: 다짐불량\n",
+    "\"설계/시공 오류\",           # 99: 빗물받이 연결관 미폐공\n",
+    "[\"공사 영향\", \"자연재해\"],      # 100: 해빙기 공사 + 토사유실\n",
+    "\"노후 지하시설물\",              # 101: 노후·파손 빗물받이 연결관\n",
+    "\"노후 지하시설물\",              # 102: 하수맨홀과 하수관 이음부 파손\n",
+    "\"노후 지하시설물\",              # 103: 상수관 누수\n",
+    "\"자연재해\",                     # 104: 집중호우\n",
+    "\"기타 / 미상\",                 # 105: 원인 미상\n",
+    "\"지반 약화\",                   # 106: 연약지반 장기압밀침하\n",
+    "\"굴착/복구 불량\",              # 107: 하수박스 연결부 채움재 불량\n",
+    "\"지반 약화\",                   # 108: 장기 압밀침하\n",
+    "\"노후 지하시설물\",              # 109: 하수박스 파손\n",
+    "\"기타 / 미상\",                 # 110: NaN\n",
+    "\"노후 지하시설물\",              # 111: 체신(통신)맨홀 파손\n",
+    "[\"공사 영향\", \"지반 약화\"],      # 112: 공사장 지하수 유출 → 토사유실\n",
+    "\"노후 지하시설물\",              # 113: 수도 누수 → 하수관(폐관) 파손\n",
+    "\"굴착/복구 불량\",              # 114: 맨홀 박스 주변 다짐 불량\n",
+    "[\"공사 영향\", \"설계/시공 오류\"], # 115: 추진공사 + 그라우팅 미실시\n",
+    "\"설계/시공 오류\",              # 116: 하수관로 접합부 이탈\n",
+    "\"노후 지하시설물\",              # 117: 하수도 노후화\n",
+    "\"기타 / 미상\",                 # 118: 원인 불명\n",
+    "\"기타 / 미상\",                  # 119: 조사중\n",
+    "\"기타 / 미상\",            # 120: 단순 도로침하\n",
+    "\"지반 약화\",              # 121: 장기 침하 등 추정\n",
+    "\"노후 지하시설물\",        # 122: 하수맨홀 하부슬라브 파손 → 하수 유출\n",
+    "\"노후 지하시설물\",        # 123: 수도 누수\n",
+    "\"노후 지하시설물\",        # 124: 하수관로 파손\n",
+    "\"노후 지하시설물\",        # 125: 하수맨홀 구체 파손\n",
+    "\"지반 약화\",              # 126: 토양의 압밀 침하\n",
+    "\"지반 약화\",              # 127: 토사 유실로 인한 단순 침하\n",
+    "\"굴착/복구 불량\",         # 128: 공사 다짐 불량\n",
+    "\"설계/시공 오류\",         # 129: 기존관·신설관 이음부 이격\n",
+    "\"굴착/복구 불량\",         # 130: 가시설 주변 토류판 부식\n",
+    "\"굴착/복구 불량\",         # 131: 가시설 주변 장기 지반침하\n",
+    "\"노후 지하시설물\"         # 132: 하수관 파손\n",
+    "]\n",
+    "\n",
+    "len(labels), len(df), index, df.shape\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 110,
+   "id": "fa936da4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0      [노후 지하시설물, 굴착/복구 불량]\n",
+       "1                  노후 지하시설물\n",
+       "2      [노후 지하시설물, 굴착/복구 불량]\n",
+       "3         [노후 지하시설물, 지반 약화]\n",
+       "4         [공사 영향, 노후 지하시설물]\n",
+       "               ...         \n",
+       "128                굴착/복구 불량\n",
+       "129                설계/시공 오류\n",
+       "130                굴착/복구 불량\n",
+       "131                굴착/복구 불량\n",
+       "132                노후 지하시설물\n",
+       "Name: sagoDetailProcessed, Length: 133, dtype: object"
+      ]
+     },
+     "execution_count": 110,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = insert_labels_to_column(df, labels, start_idx=index)\n",
+    "df[\"sagoDetailProcessed\"].iloc[:]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 111,
+   "id": "1f3c2b50",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.to_csv(\"Database/openapi/seoul/지반침하사고_정보_위경도_채움.csv\", index=False, encoding=\"utf-8-sig\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "570c8268",
+   "metadata": {},
+   "source": [
+    "## 복구 방법 전처리"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5d571ef1",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -7171,6 +7465,176 @@
     "    output_folder = \"Database/openapi/seoul\"\n",
     "    filter_and_save_seoul_rows(input_csv, output_folder)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "74d78334",
+   "metadata": {},
+   "source": [
+    "# EDA"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 114,
+   "id": "03b264c4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([nan, '호상편마암', '기타', '충척층'], dtype=object)"
+      ]
+     },
+     "execution_count": 114,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[\"grdKind\"].unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 121,
+   "id": "ffd7ecb8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['복구완료', '임시복구', '복구중'], dtype=object)"
+      ]
+     },
+     "execution_count": 121,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[\"trStatus\"].unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 124,
+   "id": "ddb47f07",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['0', '20000000', '3000000', '350000000', '5000000', '4000000',\n",
+       "       '1000000', '2000000'], dtype=object)"
+      ]
+     },
+     "execution_count": 124,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[\"trAmt\"].unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 127,
+   "id": "475e6fb6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "sagoNo                 123\n",
+       "sido                   123\n",
+       "sigungu                123\n",
+       "dong                   113\n",
+       "addr                   123\n",
+       "sagoLat                123\n",
+       "sagoLon                123\n",
+       "sagoDate               123\n",
+       "sinkWidth              123\n",
+       "sinkExtend             123\n",
+       "sinkDepth              123\n",
+       "grdKind                 32\n",
+       "sagoDetail             121\n",
+       "deathCnt               123\n",
+       "injuryCnt              123\n",
+       "vehicleCnt             123\n",
+       "trStatus               123\n",
+       "trMethod               123\n",
+       "trAmt                  123\n",
+       "trFnDate               123\n",
+       "daStDate               123\n",
+       "no                     123\n",
+       "sagoDetailProcessed    123\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 127,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[df[\"trAmt\"] == \"0\"].count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 125,
+   "id": "d395be4c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['20180306', '20180305', '20180312', '20180318', '20180507',\n",
+       "       '20180328', '20180426', '20180525', '20180429', '20180624',\n",
+       "       '20180717', '20180815', '20180905', '20181202', '20181219',\n",
+       "       '20190425', '20190728', '20190803', '20190806', '20190808',\n",
+       "       '20190814', '20190907', '20190911', '20190912', '20190917',\n",
+       "       '20190922', '20191127', '20191224', '20200108', '20200306',\n",
+       "       '20200512', '20200313', '20200515', '20200522', '20200917',\n",
+       "       '20201116', '20200922', '20200810', '20200820', '20200829',\n",
+       "       '20200812', '20200818', '20200724', '20210331', '20210309',\n",
+       "       '20210407', '20210609', '20210806', '20210704', '20210728',\n",
+       "       '20210826', '20210821', '20210905', '20220218', '20220128',\n",
+       "       '20220124', '20220624', '20220629', '20220701', '20220718',\n",
+       "       '20220706', '20220710', '20220810', '20220809', '20220814',\n",
+       "       '20220818', '20221004', '20221119', '20221210', '20230102',\n",
+       "       '20230113', '20230217', '20230308', '20230313', '20230331',\n",
+       "       '20230408', '20230412', '20230506', '20230611', '20230627',\n",
+       "       '20230612', '20230712', '20230720', '20230727', '20230806',\n",
+       "       '20230811', '20230911', '20230912', '20231012', '20231026',\n",
+       "       '20231103', '20231209', '20240104', '20240116', '20240223',\n",
+       "       '20240502', '20240714', '20240722', '20240805', '20240829',\n",
+       "       '20240828', '20240830', '20240831', '20240901', '20240908',\n",
+       "       '20240913', '20241107', '20241028', '20250317', '20250305',\n",
+       "       '20250116', '20250306', '20250430', '20250117', '20250401',\n",
+       "       '20250417', '20250424', '20250429', '20250420', '20250427',\n",
+       "       '20250426', '20250512', '20250516', '20250507', '20250518',\n",
+       "       '20250529'], dtype=object)"
+      ]
+     },
+     "execution_count": 125,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[\"trFnDate\"].unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1c2f947e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
